      version number, e.g. \code{R (>= 2.14.0), R (>= r56550)} to
      distinguish beteen R-patched and R-devel versions with the same
      SVN revision.

      \item \code{installed.packages()} now hashes the names of its
      cache files to avoid very rare problems with excessively long path
      names.  (\PR{14669})
      
      \item A top-level \file{COPYING} file in a package is no longer
      installed (file names \file{LICENSE} or \file{LICENCE} having long
      been preferred).
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives an error if the \R code in a
      vignette fails to run, unless this is caused by a missing package.

      \item \command{R CMD check} now unpacks tarballs in the same way
	as \command{R CMD INSTALL}, including making use of the
	environment variable \env{R_INSTALL_TAR} to override the default
	behaviour.

      \item \command{R CMD check} performs additional code analysis of
      package startup functions, and notifies about incorrect argument
      lists and (incorrect) calls to functions which modify the search
      path or inappropriately generate messages.

      \item \command{R CMD check} now also checks compiled code for
      symbols corresponding to functions which might terminate \R or
      write to \file{stdout}/\file{stderr} instead of the console.

      \item \command{R CMD check} now uses a \code{pdf()} device when
      checking examples (rather than \code{postscript()}).

      \item \command{R CMD check} now reports as a NOTE what look like
      methods documented with their full names even if there is a
      namespace and they are exported.  In almost all cases they are
      intended to be used only as methods and should use the
      \samp{\\method} markup.  In the other rare cases the recommended
      form is to use a function such as \code{coefHclust} which would
      not get confused with a method, document that and register it in