@@ -12,7 +12,7 @@ mean(x, \dots)
 }
 \alias{mean}
 \alias{mean.default}
-\alias{mean.data.frame}
+\alias{mean.data.frame}% <- deprecated!
 \arguments{
   \item{x}{An \R object.  Currently there are methods for
     numeric/logical vectors and \link[=Dates]{date},
@@ -31,9 +31,9 @@ mean(x, \dots)
   Generic function for the (trimmed) arithmetic mean.
 }
 \value{
-  For a data frame, a named vector with the appropriate method being
-  applied column by column.
-  
+  % For a data frame, a named vector with the appropriate method being
+  % applied column by column.
+
   If \code{trim} is zero (the default), the arithmetic mean of the
   values in \code{x} is computed, as a numeric or complex vector of
   length one.  If \code{x} is not logical (coerced to numeric), numeric
