@@ -14,13 +14,20 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
+## in the future:
+sd <- function(x, na.rm=FALSE) 	sqrt(var(as.double(x), na.rm=na.rm))
+
 sd <- function(x, na.rm=FALSE) {
-    if (is.matrix(x))
+    if (is.matrix(x)) {
+	.Deprecated("apply(*, 2, sd)")
 	apply(x, 2, sd, na.rm=na.rm)
+    }
     else if (is.vector(x))
 	sqrt(var(x, na.rm=na.rm))
-    else if (is.data.frame(x))
+    else if (is.data.frame(x)) {
+	.Deprecated("sapply(*, sd)")
 	sapply(x, sd, na.rm=na.rm)
-    else 
+    }
+    else
 	sqrt(var(as.vector(x), na.rm=na.rm))
 }
