@@ -631,7 +631,7 @@
       \item \code{installed.packages()} now hashes the names of its
       cache files to avoid very rare problems with excessively long path
       names.  (\PR{14669})
-      
+
       \item A top-level \file{COPYING} file in a package is no longer
       installed (file names \file{LICENSE} or \file{LICENCE} having long
       been preferred).
@@ -735,12 +735,17 @@
       \item Use of \code{library.dynam()} without specifying all the
       first three arguments is deprecated.  (It is often called from a
       namespace, and the defaults are only appropriate to a package.)
-      
+
       Use of \code{chname} in \code{library.dynam()} with the extension
       \file{.so} or \code{.dll} (which is clearly not allowed according
       to the help page) is deprecated.  This also applies to
       \code{library.dynam.unload()} and \code{useDynLib} directives in
       \code{NAMESPACE} files.
+
+      It is deprecated now to use \code{mean(x)} and \code{sd(x)}
+      directly on data frames (or also matrices, for \code{sd})
+      \code{x}, instead of simply using \code{sapply}.
+%% should become defunct not earlier than end of summer 2013!
     }
   }
 
